--- a/AshleyRobinsonCV.tex
+++ b/AshleyRobinsonCV.tex
@@ -58,20 +58,29 @@
 
 
 \section{Work Experience}
-\cventry{Sep. 2014 - Present}{Cambridge Design Partnership LLP}{}{}{Church Road, Toft, Cambridge, CB23 2RF \newline Consultant Electronics Engineer}
+\cventry{Oct. 2017 - Present}{Graphcore Ltd}{}{}{11-19 Wine Street, Bristol, BS1 2PH, UK\newline Silicon Engineer}
+      { Chip company designing Intelligence Processing Units (IPUs) for Machine Intelligence (MI). 
+        Member of the silicon engineering team working on the verification of of high speed interfaces.
+        }
+\cventry{Aug 2017}{Travel}{}{}{India and North West USA}
+        {}
+
+\cventry{Sep. 2014 - Jul. 2017}{Cambridge Design Partnership LLP}{}{}{Church Road, Toft, Cambridge, CB23 2RF, UK \newline Consultant Electronics Engineer}
       {  A technology and product design consultancy. 
          Working on many cross discipline projects but remaining focused on the application of electronics; typically in consumer products.
          Core skills applied include analogue circuit design, PCB design and digital hardware design with concurrent low level software development. 
          Additional skills exercised range from basic mechanical engineering to high level software development.       
-Recently I have been involved in many projects using inertial measurement units (IMUs) and other sensors to track user behavior. This has been in the capacity of wearable technology for sports applications but also to gain user insights. A typical example would be instrumenting an existing product so a piece of electronics can wake-on-motion to log accelerometer and gyroscope data to later gain insights to use frequency and handling. Wearable sensor development has involved writing algorithms from the ground up to compute bio-mechanical metrics from raw IMU data which is then validated with motion capture equipment.
+        Involved in many projects using inertial measurement units (IMUs) and other sensors to track user behavior. This has been in the capacity of wearable technology for sports applications but also to gain user insights. A typical example would be instrumenting an existing product so a piece of electronics can wake-on-motion to log accelerometer and gyroscope data to later gain insights to use frequency and handling. Wearable sensor development has involved writing algorithms from the ground up to compute bio-mechanical metrics from raw IMU data which is then validated with motion capture equipment.
       }
 
-\cventry{Summer 2012  Summer 2013}{Cambridge Silicon Radio (CSR) PLC}{}{}{Churchill House, Cambridge Business Park, Cowley Road, Cambridge, CB4 0WZ \newline Student Placement}
+\cventry{Summer 2012  Summer 2013}{Cambridge Silicon Radio (CSR) PLC}{}{}{Churchill House, Cambridge Business Park, Cowley Road, Cambridge, CB4 0WZ, UK \newline Student Placement}
       {Working with the digital design team assisting with the development and verification of their Near Field Communications (NFC) technology. 
       Side projects included verification of an LCD hardware driver and designing a serial to parallel converter for in-house test hardware.
       This was 20 weeks in total divided over two summers. I was awarded UKESF Scholar of the Year partly based upon my achievements at CSR.}
-\cventry{Jul. 2008 - Sep. 2010}{Sainsbury's plc}{}{}{Draymans Way, Alton GU34 1SS \newline Customer Service Assistant}{Assisting customers along with operating both traditional and self-serve checkouts. }
-\cventry{Jul. 2006 - Oct. 2013}{M.J.Robinson Garden Maintenance}{6 Ferney Close, Chawton, Hampshire, GU34 1SQ}{}{\newline Assistant to the head gardener}{
+
+\cventry{Jul. 2008 - Sep. 2010}{Sainsbury's plc}{}{}{Draymans Way, Alton GU34 1SS, UK \newline Customer Service Assistant}{Assisting customers along with operating both traditional and self-serve checkouts. }
+
+\cventry{Jul. 2006 - Oct. 2013}{M.J.Robinson Garden Maintenance}{}{}{6 Ferney Close, Chawton, Hampshire, GU34 1SQ, UK\newline Assistant to the head gardener}{
       Maintaining the grounds of homes and businesses, large and small, in the Alton, Hampshire area.}
 
 
@@ -102,8 +111,9 @@ Recently I have been involved in many projects using inertial measurement units 
 \cvitem{Programming}{On both Windows and Linux environments. Assembler, C, C\#, PHP, Python and Verilog/SystemVerilog. Constructed my own website which contains a growing list of software projects.}
 \cvitem{Music}{Enthusiastic guitar player. Broad range of music taste.}
 \cvitem{Surfing}{I have been surfing for two years now and recently brought my first surfboard.}
-\cvitem{Travel}{I have backpacked across India staying at hostels from Delhi to Mumbai and Goa. I have been on self organised camping trips across the USA, Scotland and Europe also many other places throughout England during my time in the Scouts. 
-            I have also toured Canada by RV and train from Vancouver to Montr\'{e}al with many detours.}
+\cvitem{Travel}{    I have backpacked across India staying in hostels from Delhi to Mumbai and Goa. 
+                    I have been on self organised camping trips across the USA, Scotland and Europe also many other places throughout England during my time in the Scouts. 
+                    I have also toured Canada by RV and train from Vancouver to Montr\'{e}al with many detours.}
 
 \section{Contact Details}
 \cvitem{Address}{Mr Ashley J. Robinson, 6 Ferney Close, Chawton, Alton, Hampshire, GU34 1SQ, England, UK}
@@ -152,20 +162,23 @@ UK
 
 \section{Version Control }
 \cvitem{CV Date}{\today}
-\cvitem{Version}{2.10} 
+\cvitem{Version}{3.0} 
 
-%  2.10 Changed summer placement to indicate only summers
-%  2.9 Changed academic reference to GVM after meeting at UKESF event. Removed Fash as he is no longer at CSR. Also added to travel interests. Changed address.
-%  2.8 Removed UKESF link and added details on wearables plus hobbies
-%  2.7 Added skills section
-%  2.6 Update address
-%  2.5 Another blog post at CDP
-%  2.4 Changed job title, address and email
-%  2.3 Added blog on battery charging
-%  2.2 Removed some commas and tweak a word
-%  2.1 Added blog post from CDP
-%  2.0 Started at CDP
-%  1.0 At uni
+%  3.0      Started at Grapchore
+
+%  2.10     Changed summer placement to indicate only summers
+%  2.9      Changed academic reference to GVM after meeting at UKESF event. Removed Fash as he is no longer at CSR. Also added to travel interests. Changed address.
+%  2.8      Removed UKESF link and added details on wearables plus hobbies
+%  2.7      Added skills section
+%  2.6      Update address
+%  2.5      Another blog post at CDP
+%  2.4      Changed job title, address and email
+%  2.3      Added blog on battery charging
+%  2.2      Removed some commas and tweak a word
+%  2.1      Added blog post from CDP
+%  2.0      Started at CDP
+
+%  1.0      At uni
 
 
 
