--- a/AshleyRobinsonCV.tex
+++ b/AshleyRobinsonCV.tex
@@ -70,7 +70,7 @@
          Working on many cross discipline projects but remaining focused on the application of electronics; typically in consumer products.
          Core skills applied include analogue circuit design, PCB design and digital hardware design with concurrent low level software development. 
          Additional skills exercised range from basic mechanical engineering to high level software development.       
-        Involved in many projects using inertial measurement units (IMUs) and other sensors to track user behavior. This has been in the capacity of wearable technology for sports applications but also to gain user insights. A typical example would be instrumenting an existing product so a piece of electronics can wake-on-motion to log accelerometer and gyroscope data to later gain insights to use frequency and handling. Wearable sensor development has involved writing algorithms from the ground up to compute bio-mechanical metrics from raw IMU data which is then validated with motion capture equipment.
+        Involved in many projects using inertial measurement units (IMUs) and other sensors to track user behaviour. This has been in the capacity of wearable technology for sports applications but also to gain user insights. A typical example would be instrumenting an existing product so a piece of electronics can wake-on-motion to log accelerometer and gyroscope data to later gain insights to use frequency and handling. Wearable sensor development has involved writing algorithms from the ground up to compute bio-mechanical metrics from raw IMU data which is then validated with motion capture equipment.
       }
 
 \cventry{Summer 2012  Summer 2013}{Cambridge Silicon Radio (CSR) PLC}{}{}{Churchill House, Cambridge Business Park, Cowley Road, Cambridge, CB4 0WZ, UK \newline Student Placement}
