Add verification stuff

--- a/AshleyRobinsonCV.tex
+++ b/AshleyRobinsonCV.tex
@@ -96,7 +96,8 @@
 \cvitem{Electronics Test}{Extensive use of basic test equipment. Multimeters, oscilloscopes, programmable loads, spectrum analysers, signal generators and LCR (Inductance, Capacitance and Resistance) meters to as low as Femto Farads. Electromagnetic compatibility (EMC) testing for radiation, immunity and electrostatic discharge (ESD). }
 \cvitem{Electronics Manufacture}{Prototyping skills using stripboard/copper-clad, hand assemble techniques down to 0402 passives and 0.5mm pitch discrete components, high volume (1M+/year) component sourcing, outsourcing PCB layout and working with small/large volume (1M+/year) contract electronics manufacturers (CEMs). Familiarity with EMC, low voltage and waste electronics EU directives. }
 \cvitem{FPGA}{Designed digital modules in \textbf{Verilog} and simulation using \textbf{ModelSim}, \textbf{Cadence} and \textbf{Icarus}.}
-\cvitem{ASIC}{Design and simulation of custom libraries and integration for \textbf{VLSI} chip manufacture using \textbf{Magic}.}
+\cvitem{Chip Design (Physical)}{Design and simulation of custom libraries and integration for \textbf{VLSI} chip manufacture using \textbf{Magic}.}
+\cvitem{Chip Design (Verification)}{Verification of large designs using \textbf{Questa}, custom coverage collection in python with \textbf{DPI} calls inside \textbf{SystemVerilog} monitors and testing using a \textbf{grid engine}.}
 \cvitem{Embedded Software}{Developed embedded software on Atmel, Microchip and STM32 microcontrollers. Mainly in the \textbf{C} programming language and often using \textbf{FreeRTOS}.}
 \cvitem{Software}{Developed CLI and GUI applications using \textbf{C\#} and \textbf{Python} and basic server side applications in \textbf{PHP}.}
 \cvitem{Modeling and Simulation}{In depth modeling and simulation of custom electronic components and physical principals using \textbf{Matlab} and \textbf{SciPy}. Experience with \textbf{SciKit-learn} machine learning library.}
@@ -162,8 +163,9 @@ UK
 
 \section{Version Control }
 \cvitem{CV Date}{\today}
-\cvitem{Version}{3.0} 
+\cvitem{Version}{3.1} 
 
+%  3.1      Added some verification stuff
 %  3.0      Started at Grapchore
 
 %  2.10     Changed summer placement to indicate only summers
