--- a/AshleyRobinsonCV.tex
+++ b/AshleyRobinsonCV.tex
@@ -35,7 +35,7 @@
 \makecvtitle
 
 \section{Education}
-\cventry{Oct. 2010 - Jun. 2014}{Master of Engineering}{with First Class Honours}{in Electronic Engineering with Artificial Intelligence}{University of Southampton}{
+\cventry{\hspace{0.5cm}Oct 2010 Jun 2014}{Master of Engineering}{with First Class Honours}{in Electronic Engineering with Artificial Intelligence}{University of Southampton}{
    Modules include
    Analogue Electronics,
    Computer Systems, 
@@ -53,19 +53,31 @@
    and
    Software Development
 }{}
-\cventry{Sept. 2008 - June 2010}{A-Levels}{}{Alton College, Alton, Hampshire}{}{Electronics (A*), Mathematics (A) and Physics (A). AS-Level Computing(A).}
-\cventry{Sept. 2003 - June 2008}{GCSEs}{}{Amery Hill Secondary School, Alton, Hampshire}{}{Art(D), Biology(A), Chemistry(A), Design and Technology(A*), English Language(B), English Literature(C), Geography(B), ICT(B), Mathematics(A*) and Physics(A)}
+\cventry{\hspace{0.5cm}Sep 2008 Jun 2010}{A-Levels}{}{Alton College, Alton, Hampshire}{}{Electronics (A*), Mathematics (A) and Physics (A). AS-Level Computing(A).}
+\cventry{\hspace{0.5cm}Sep 2003 June 2008}{GCSEs}{}{Amery Hill Secondary School, Alton, Hampshire}{}{Art(D), Biology(A), Chemistry(A), Design and Technology(A*), English Language(B), English Literature(C), Geography(B), ICT(B), Mathematics(A*) and Physics(A)}
 
 
 \section{Work Experience}
-\cventry{Oct. 2017 - Present}{Graphcore Ltd}{}{}{11-19 Wine Street, Bristol, BS1 2PH, UK\newline Silicon Engineer}
-      { Chip company designing Intelligence Processing Units (IPUs) for Machine Intelligence (MI). 
-        Member of the silicon engineering team working on the verification of of high speed interfaces.
+\cventry{\hspace{0.5cm} Sep 2022 Present}{Graphcore Ltd}{}{}{11-19 Wine Street, Bristol, BS1 2PH, UK\newline Silicon Architect}
+      { Specifying and modelling architecture for the 3\textsuperscript{rd} and 4\textsuperscript{th} generation chipsets.
+        Primarily focussing on LPDDR5-6400 SDRAM integration with the application processors and host CPU accesses.
+        Including atomic semaphore operation, boot loading widgets and proprietary checksum code/cache design. 
+        Responsibilities included releasing the silicon chip specification and working with hardware, silicon and 
+        software engineers to incorporate their feedback. Additionally modelling with bespoke simulators written in
+        C++ and Rust.
+        }
+
+\cventry{\hspace{0.5cm} Oct 2017 Sep 2022}{Graphcore Ltd}{}{}{11-19 Wine Street, Bristol, BS1 2PH, UK\newline Silicon Engineer}
+      { Silicon Chip company designing Intelligence Processing Units (IPUs) for Artificial Intelligence (AI). 
+        Member of the silicon engineering team primarily focussed on Digital Design but also involved in Design For Test, 
+        Physical Design and Verification. Highlights include designing an on-chip virtual channel terabit interconnect, 
+        a voltage droop limiter with reaction time of a few nanoseconds and manufacturing repair of the processor exchange logic
+        using functional test vectors. Responsibilities also included interfacing with 3\textsuperscript{rd} party IP, managing RAM macro
+        integration across frontend and verification plan closure.
         }
 \cventry{Aug 2017}{Travel}{}{}{India and North West USA}
         {}
-
-\cventry{Sep. 2014 - Jul. 2017}{Cambridge Design Partnership LLP}{}{}{Church Road, Toft, Cambridge, CB23 2RF, UK \newline Consultant Electronics Engineer}
+\cventry{\hspace{0.5cm}Sep 2014 Jul 2017}{Cambridge Design Partnership LLP}{}{}{Church Road, Toft, Cambridge, CB23 2RF, UK \newline Consultant Electronics Engineer}
       {  A technology and product design consultancy. 
          Working on many cross discipline projects but remaining focused on the application of electronics; typically in consumer products.
          Core skills applied include analogue circuit design, PCB design and digital hardware design with concurrent low level software development. 
@@ -73,97 +85,73 @@
         Involved in many projects using inertial measurement units (IMUs) and other sensors to track user behaviour. This has been in the capacity of wearable technology for sports applications but also to gain user insights. A typical example would be instrumenting an existing product so a piece of electronics can wake-on-motion to log accelerometer and gyroscope data to later gain insights to use frequency and handling. Wearable sensor development has involved writing algorithms from the ground up to compute bio-mechanical metrics from raw IMU data which is then validated with motion capture equipment.
       }
 
-\cventry{Summer 2012  Summer 2013}{Cambridge Silicon Radio (CSR) PLC}{}{}{Churchill House, Cambridge Business Park, Cowley Road, Cambridge, CB4 0WZ, UK \newline Student Placement}
-      {Working with the digital design team assisting with the development and verification of their Near Field Communications (NFC) technology. 
+\cventry{Summer 2012 Summer 2013}{Cambridge Silicon Radio (CSR) PLC}{}{}{Churchill House, Cambridge Business Park, Cowley Road, Cambridge, CB4 0WZ, UK \newline Student Placement}
+      {Working with the Digital Design team assisting with the development and verification of their Near Field Communications (NFC) technology. 
       Side projects included verification of an LCD hardware driver and designing a serial to parallel converter for in-house test hardware.
       This was 20 weeks in total divided over two summers. I was awarded UKESF Scholar of the Year partly based upon my achievements at CSR.}
 
-\cventry{Jul. 2008 - Sep. 2010}{Sainsbury's plc}{}{}{Draymans Way, Alton GU34 1SS, UK \newline Customer Service Assistant}{Assisting customers along with operating both traditional and self-serve checkouts. }
+\cventry{\hspace{0.5cm}Jul 2008 Sep 2010}{Sainsbury's plc}{}{}{Draymans Way, Alton GU34 1SS, UK \newline Customer Service Assistant}{Assisting customers along with operating both traditional and self-serve checkouts. }
 
-\cventry{Jul. 2006 - Oct. 2013}{M.J.Robinson Garden Maintenance}{}{}{6 Ferney Close, Chawton, Hampshire, GU34 1SQ, UK\newline Assistant to the head gardener}{
+\cventry{\hspace{0.5cm}Jul 2006 Oct 2013}{M.J.Robinson Garden Maintenance}{}{}{6 Ferney Close, Chawton, Hampshire, GU34 1SQ, UK\newline Assistant to the head gardener}{
       Maintaining the grounds of homes and businesses, large and small, in the Alton, Hampshire area.}
+
+\section{Patents}
+\cvitem{GB2216786.0}{UK Patent Application, Virtual Channel Buffer Bypass, filed Dec 2022, Ashley Robinson}
+\cvitem{18/505,478}{US Patent Application, Virtual Channel Buffer Bypass, filed Nov 2023, Ashley Robinson}
 
 
 \section{Additional Qualifications and Achievements}
-\cvitemwithcomment{Jun. 2014}{Captec Award for Entrepreneurial Industrial Innovation}{Excellence award approved by Professor Max Toti.}
-\cvitemwithcomment{Feb. 2014}{EMECS-thon Winner}{Best "Internet of Things" Implementation at the University of Southampton.}
-\cvitemwithcomment{Nov. 2013}{UKESF Scholar of the Year             }{Presented at the National Microelectronics Institute gala dinner.}
-\cvitemwithcomment{Jan. 2012 - Jun. 2014}{UK Electronics Skills Foundation Scholar}{UKESF is a collaboration between industry, universities and the public sector.}
-\cvitemwithcomment{2009 - Present}{Full clean UK Driving License}{}
+\cvitemwithcomment{Nov 2023}{Hiked the Inca Trail - Ollaytantambo to Machu Picchu, Peru}{}
+\cvitemwithcomment{Aug 2022}{Hiked the West Highland Way - Glasgow to Fort William, Scotland}{}
+\cvitemwithcomment{Sep 2021}{Cycled mainland UK - John O'Groats, Scotland to Land's End, England}{}
+\cvitemwithcomment{\hspace{0.5cm}Jul 2021 Present}{Full clean UK Motorcycle License}{}
+\cvitemwithcomment{Jun 2014}{Captec Award for Entrepreneurial Industrial Innovation}{Presented by Professor Max Toti.}
+\cvitemwithcomment{Feb 2014}{EMECS-thon Winner}{Best "Internet of Things" Implementation at the University of Southampton.}
+\cvitemwithcomment{Nov 2013}{UKESF Scholar of the Year             }{Presented at the National Microelectronics Institute gala dinner.}
+\cvitemwithcomment{\hspace{0.5cm}Jan 2012 Jun 2014}{UK Electronics Skills Foundation Scholar}{UKESF is a collaboration between industry, universities and the public sector.}
+\cvitemwithcomment{\hspace{0.5cm}Jul 2009 Present}{Full clean UK Driving License}{}
 
 \section{Skills}
 \cvitem{Electronics Design}{Design of electronic circuits using \textbf{Altium}, \textbf{Eagle} and \textbf{KiCad} schematic capture/layout tools and \textbf{SPICE} simulations. Analogue, digital, mixed signal, switch mode power supplies, high speed digital interfaces, low power and common frequency RF.}
 \cvitem{Electronics Test}{Extensive use of basic test equipment. Multimeters, oscilloscopes, programmable loads, spectrum analysers, signal generators and LCR (Inductance, Capacitance and Resistance) meters to as low as Femto Farads. Electromagnetic compatibility (EMC) testing for radiation, immunity and electrostatic discharge (ESD). }
 \cvitem{Electronics Manufacture}{Prototyping skills using stripboard/copper-clad, hand assemble techniques down to 0402 passives and 0.5mm pitch discrete components, high volume (1M+/year) component sourcing, outsourcing PCB layout and working with small/large volume (1M+/year) contract electronics manufacturers (CEMs). Familiarity with EMC, low voltage and waste electronics EU directives. }
-\cvitem{FPGA}{Designed digital modules in \textbf{Verilog} and simulation using \textbf{ModelSim}, \textbf{Cadence} and \textbf{Icarus}.}
-\cvitem{Chip Design (Physical)}{Design and simulation of custom libraries and integration for \textbf{VLSI} chip manufacture using \textbf{Magic}.}
-\cvitem{Chip Design (Verification)}{Verification of large designs using \textbf{Questa}, custom coverage collection in python with \textbf{DPI} calls inside \textbf{SystemVerilog} monitors and testing using a \textbf{grid engine}.}
 \cvitem{Embedded Software}{Developed embedded software on Atmel, Microchip and STM32 microcontrollers. Mainly in the \textbf{C} programming language and often using \textbf{FreeRTOS}.}
-\cvitem{Software}{Developed CLI and GUI applications using \textbf{C\#} and \textbf{Python} and basic server side applications in \textbf{PHP}.}
+\cvitem{FPGA}{Designed digital modules in \textbf{SystemVerilog} and simulation using \textbf{ModelSim}, \textbf{Cadence} and \textbf{Icarus}. Including open source tool suites \textbf{IceStorm} and \textbf{Verilator}. }
 \cvitem{Modeling and Simulation}{In depth modeling and simulation of custom electronic components and physical principals using \textbf{Matlab} and \textbf{SciPy}. Experience with \textbf{SciKit-learn} machine learning library.}
 \cvitem{Mechanical}{Basic CAD experience in \textbf{FreeCAD} and use of FDM/Polyjet 3D printing technology.}
 \cvitem{Project Management}{Involved in proposal writing and planning for multi-discipline work packages. Managed projects lasting over 6 months worth £150K in company fees with a 3 member team. Electronics/software lead on several 2 to 4 team member projects.}
+\cvitem{Silicon Engineering (Design)}{Extensive designs written in \textbf{SystemVerilog} with automated wiring and specification extraction tooling. Interfacing with DFT and backend. Formal testbench writing for smoke testing. }
+\cvitem{Silicon Engineering (Physical)}{Involved in synthesis and timing closure with tapeouts on TSMC 16nm and 7nm technology. Design and simulation of fully custom cell libraries and integration for \textbf{VLSI} chip manufacture using \textbf{Magic} for university projects.}
+\cvitem{Silicon Engineering (Verification)}{Simulation of large designs \textbf{Questa}/\textbf{VCS}. Formal verification using \textbf{VC Formal}. Custom coverage collection in python with \textbf{DPI} monitors and regression testing using a \textbf{grid engine}.}
+\cvitem{Software}{Silicon architecture modelling in \textbf{C++} and \textbf{Rust}. Developed CLI and GUI applications using \textbf{C\#} and \textbf{Python} and basic server side applications in \textbf{PHP}.}
+\cvitem{Technical Writing}{Structured specifications for large engineering teams with normative point traceability.}
 
 \section{Hobbies and Interests}
-\cvitem{Film}{Avid film fan with a passion for science-fiction.}
+\cvitem{Cars and Motorcycles}{Previously an owner of Land Rovers and Jeeps. Currently I have BMW GS650 which I have ridden across Spain.}
 \cvitem{Clay Shooting}{Clay pigeon shooting since the age of 16 usually sporting layouts.}
-\cvitem{Hobbyist Electronics}{Audio equipment, radios and robots. Many projects using electronics and maths skills acquired from the age of 15 onward. Using microcontrollers, FPGAs and analogue circuits.}
-\cvitem{Off-Roading}{Land Rover owner in the past along with a couple of motocross bikes. Lots of green laning around Hampshire.}
-\cvitem{Programming}{On both Windows and Linux environments. Assembler, C, C\#, PHP, Python and Verilog/SystemVerilog. Constructed my own website which contains a growing list of software projects.}
+\cvitem{Cycling}{I have done a few bike touring trips but most of the time head to the mountain biking trails.}
+\cvitem{Hobbyist Electronics}{More obscure projects than the day job (https://github.com/ashleyjr) including a submission to Tiny Tapeout 4 (https://tinytapeout.com/).}
 \cvitem{Music}{Enthusiastic guitar player. Broad range of music taste.}
-\cvitem{Surfing}{I have been surfing for two years now and recently brought my first surfboard.}
-\cvitem{Travel}{    I have backpacked across India staying in hostels from Delhi to Mumbai and Goa. 
-                    I have been on self organised camping trips across the USA, Scotland and Europe also many other places throughout England during my time in the Scouts. 
-                    I have also toured Canada by RV and train from Vancouver to Montr\'{e}al with many detours.}
+\cvitem{Programming}{Mac/Windows/Linux environments. Assembler, C, C\#, C++, Python and SystemVerilog.}
+\cvitem{Surfing}{I have been surfing for a few years a mainly head to south Wales for the waves.}
+\cvitem{Travel}{Backpacked across India staying in hostels from Delhi to Mumbai and Goa. 
+                Self organised camping trips through Japan, Madagascar, Norway, the USA and many others. 
+                Part of group tours through Botswana and Peru.}
 
 \section{Contact Details}
-\cvitem{Address}{Mr Ashley J. Robinson, 6 Ferney Close, Chawton, Alton, Hampshire, GU34 1SQ, England, UK}
+\cvitem{Address}{Mr Ashley J. Robinson, 4d Regents Place, Bradford-On-Avon, Wiltshire, BA15 1ED, UK}
 \cvitem{Web}{\href{http://www.ajrobinson.org}{http://www.ajrobinson.org}}
 \cvitem{Email}{\href{mailto:ashley@ajrobinson.org}{ashley@ajrobinson.org}}
 \cvitem{Mobile}{+44 (0) 7557506617}
 
 \section{References}
-\cvitem{Mr Richard Hunt}{
-Cambridge Design Partnership,
-Church Road, Toft,
-Cambridge,
-CB23 2RF,
-England,
-UK
-\newline Email:  \href{mailto:rnh@cambridge-design.co.uk}{rnh@cambridge-design.co.uk}
-\newline Tel: +44 (0) 1223 264428
-}
-
-\cvitem{Dr Geoff Merrett}{
-University of Southampton, 
-University Road, 
-Southampton,
-SO17 1BJ,
-England,
-UK
-\newline Email: \href{mailto:gvm@ecs.soton.ac.uk}{gvm@ecs.soton.ac.uk}
-\newline Tel: +44 (0) 2380 592775
-}
-
-\section{Media Presence}
-
-\cvitem{CDP: Blogs}{\href{http://www.cambridge-design.co.uk/news-and-articles/blog/flaming-hoverboards}{www.cambridge-design.co.uk/news-and-articles/blog/flaming-hoverboards}}
-
-\cvitem{}{\href{http://www.cambridge-design.co.uk/news-and-articles/blog/exploding_batteries}{www.cambridge-design.co.uk/news-and-articles/blog/exploding\_batteries}}
-
-\cvitem{}{\href{http://www.cambridge-design.co.uk/news-and-articles/blog/meet-ashley-our-near-field-communications-expert}{www.cambridge-design.co.uk/news-and-articles/blog/meet-ashley-our-near-field-communications-expert}}
-
-\cvitem{ECS: Careers}{\href{https://blog.soton.ac.uk/careershub/2014/12/15/hearing-from-our-graduates-ashley-robinson-at-cdp/}{blog.soton.ac.uk/careershub/2014/12/15/hearing-from-our-graduates-ashley-robinson-at-cdp/}}
-
-\cvitem{EMECS-thon: Winner}{\href{http://youtu.be/0NC3W49Lj-A}{youtu.be/0NC3W49Lj-A}}
-
-\cvitem{UKESF-ECS: Finalist}{\href{http://www.ecs.soton.ac.uk/news/4376}{www.ecs.soton.ac.uk/news/4376}}
-
-
+\cvitem{}{Available upon request.}
 
 \section{Version Control }
 \cvitem{CV Date}{\today}
-\cvitem{Version}{3.1} 
+\cvitem{Version}{4.0} 
+
+%  4.0      Added new role at Graphcore
 
 %  3.1      Added some verification stuff
 %  3.0      Started at Grapchore
